--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
+    "vercel": "^48.10.11",
     "vite": "^5.4.20"
   },
   "optionalDependencies": {
